# persona_composer

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
playground/: __init__.py  app.py  export.py  llm.py  modules_io.py  requirements.txt  styles.py
src/persona_composer/: __init__.py  cli.py  compose.py  decompose.py  errors.py  hashing.py  models.py  parse.py  registry.py  render.py  rewriter.py  validate.py
tests/: conftest.py  test_compose.py  test_decompose.py  test_rewriter.py  test_validate.py
tests/fixtures/golden/: full_prompt.xml
tests/fixtures/modules/bad/: unknown_type.md
tests/fixtures/modules/identity/: guard.md  twin_a.md  twin_b.md
tests/fixtures/modules/output_rules/: concise.md  default.md
tests/fixtures/modules/relationships/: ally_bob.md  broken.md
tests/fixtures/modules/roles/: gatekeeper.md
tests/fixtures/modules/speech/: caveman.md  curt.md  fancy_rewriter.md  pohuy.md
tests/fixtures/modules/traits/: cautious.md  flexible.md  one_sided.md  stubborn.md  territorial.md  typo_conflict.md
ts/: package-lock.json  package.json  tsconfig.json
ts/src/: cli.ts  compose.ts  decompose.ts  errors.ts  hashing.ts  index.ts  models.ts  parse.ts  registry.ts  render.ts  rewriter.ts  validate.ts
ts/test/: compose.test.ts  decompose_rewriter.test.ts  validate.test.ts
